Установил EDM. External dependency manager.
Вот ссылка с инструкцией по установки:
https://github.com/GameWorkstore/com.google.external-dependency-manager?tab=readme-ov-file

Фишка в том, что в releases нету файла .unitypackage
Так что устанавливать вот так:
Install via git URL
Open Package Manager
Click on the + icon on the top left corner of the "Package Manager" screen
Click on "Install package from git url..."
Paste: https://github.com/googlesamples/unity-jar-resolver.git?path=upm

Что такое External Dependency Manager, и почему без него не появляется рекламный баннер и не работает yandex sdk:

EDM4U (External Dependency Manager for Unity) — это служебный инструмент от Google,
который Unity использует для того, чтобы:

1. Находить Android и iOS библиотеки, от которых зависят плагины (например, Yandex Ads SDK, Firebase и т.п.);
2. Скачивать их из Maven или CocoaPods репозиториев;
3. Добавлять их в Android Gradle-проект, чтобы Java-классы реально попали в APK/AAB.

📦 Что появилось в проекте после установки

После установки в Package Manager ты должен видеть:
External Dependency Manager for Unity (com.google.external-dependency-manager)
А в меню Unity появится пункт:
Assets → External Dependency Manager → Android Resolver
(Если его нет — перезапусти Unity, иногда нужно.)

🧠 Что он делает на практике

Когда ты импортируешь плагин вроде Yandex Mobile Ads SDK,
в его папке Assets/Plugins/Android обычно есть файл Dependencies.xml
вроде такого:

<dependencies>
    <androidPackages>
        <androidPackage spec="com.yandex.android:mobileads:5.10.0">
            <repositories>
                <repository>https://maven.yandex.ru/maven2/</repository>
            </repositories>
        </androidPackage>
    </androidPackages>
</dependencies>

Без EDM4U Unity просто игнорирует этот файл.
Но когда EDM установлен, ты можешь запустить:

Assets → External Dependency Manager → Android Resolver → Resolve

И он сделает следующее:
* подключит https://maven.yandex.ru/maven2/ как источ

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.google.external-dependency-manager": "https://github.com/googlesamples/unity-jar-resolver.git?path=upm",
     "com.unity.adaptiveperformance.google.android": "5.1.6",
     "com.unity.collab-proxy": "2.9.3",
     "com.unity.device-simulator.devices": "1.0.0",
